Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <div class="container-inner">
         
         <div id="step1-user-input" class="step">
-            <div class="header">CỬA HÀNG VẬT PHẨM</div>
+            <div class="header">CHAT PLAYS GAME</div>
             <h2>1. NHẬP ID TIKTOK CỦA BẠN</h2>
             
             <label for="tiktok-id">ID TikTok (Chỉ nhập tên, không có @)</label>
@@ -564,3 +564,4 @@
     </script>
 </body>
 </html>
+
