Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -529,23 +529,33 @@
             ACCOUNT_NO: "88942689999",
             ACCOUNT_NAME: "NGUYEN TRAN HIEU NHAN"
         };
+        
         const SHOP_GROUPS = [
             {
-                groupName: "Gói Combo (Key + Box)",
+                groupName: "Combo Gacha",
                 items: [
-                    { sku: 'GOI1', name: 'Gói 1 Key + 1 Box', price: 13000, description: 'Combo siêu tiết kiệm!' },
-                    { sku: 'GOI2', name: 'Gói 4 Keys + 4 Boxes', price: 50000, description: 'Combo mạnh mẽ hơn' },
-                    { sku: 'GOI3', name: 'Gói 8 Keys + 8 Boxes', price: 100000, description: 'Combo siêu giá trị' }
+                    { sku: 'GOI1', name: 'Gói 1 (1 Key + 1 Box)', price: 13000, description: 'Combo 13k' },
+                    { sku: 'GOI2', name: 'Gói 2 (4 Keys + 4 Boxes)', price: 50000, description: 'Combo 50k' },
+                    { sku: 'GOI3', name: 'Gói 3 (8 Keys + 8 Boxes)', price: 100000, description: 'Combo 100k' },
+                    { sku: 'GOI4', name: 'Gói 4 (15 Keys + 15 Boxes)', price: 180000, description: 'Combo 180k' }
                 ]
             },
             {
-                groupName: "Gói Gacha Lẻ (Key/Box)",
+                groupName: "Gói Key Lẻ",
                 items: [
-                    { sku: 'KEY1', name: 'Gói 1 Key', price: 10000, description: 'Mở khóa 1 Chìa Khóa' },
-                    { sku: 'KEY2', name: 'Gói 6 Keys', price: 50000, description: 'Gói chìa khóa lớn hơn' },
-                    { sku: 'KEY3', name: 'Gói 13 Keys', price: 100000, description: 'Số lượng chìa khóa lớn' },
-                    { sku: 'KEY4', name: 'Gói Key Khủng', price: 500000, description: 'Gói chìa khóa lớn nhất (500k)' },
-                    { sku: 'BOX1', name: 'Gói 1 Box', price: 5000, description: 'Mở khóa 1 Hộp May Mắn' }
+                    { sku: 'KEY1', name: 'Gói 1 Key', price: 10000, description: 'Gói 10k' },
+                    { sku: 'KEY2', name: 'Gói 6 Keys', price: 50000, description: 'Gói 50k' },
+                    { sku: 'KEY3', name: 'Gói 13 Keys', price: 100000, description: 'Gói 100k' },
+                    { sku: 'KEY4', name: 'Gói 25 Keys', price: 200000, description: 'Gói 200k' }
+                ]
+            },
+            {
+                groupName: "Gói Box Lẻ",
+                items: [
+                    { sku: 'BOX1', name: 'Gói 1 Box', price: 5000, description: 'Gói 5k' },
+                    { sku: 'BOX2', name: 'Gói 6 Boxes', price: 25000, description: 'Gói 25k' },
+                    { sku: 'BOX3', name: 'Gói 13 Boxes', price: 50000, description: 'Gói 50k' },
+                    { sku: 'BOX4', name: 'Gói 25 Boxes', price: 110000, description: 'Gói 110k' }
                 ]
             },
             {
